--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Пушистые друзья!</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<p>Привет, мир!</p>
+<div class="wrapper-block">
+    <header>
+        <div class="header-block">
+            <div class="container">
+                <div class="header-block__container">
+                    <svg class="header-block__container_icon" width="30" height="33" viewBox="0 0 30 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.8375 0.68125C15.575 0.5625 15.2938 0.5 15 0.5C14.7063 0.5 14.425 0.5625 14.1625 0.68125L2.39378 5.675C1.01878 6.25625 -0.00622157 7.6125 2.84281e-05 9.25C0.0312784 15.45 2.58128 26.7938 13.35 31.95C14.3938 32.45 15.6063 32.45 16.65 31.95C27.4188 26.7938 29.9688 15.45 30 9.25C30.0063 7.6125 28.9813 6.25625 27.6063 5.675L15.8375 0.68125ZM9.05628 18.3875C9.35628 18.4625 9.67503 18.5 10 18.5C12.2063 18.5 14 16.7062 14 14.5V10.5H16.7625C17.5188 10.5 18.2125 10.925 18.55 11.6062L19 12.5H23C23.55 12.5 24 12.95 24 13.5V15.5C24 18.2625 21.7625 20.5 19 20.5H16V23.6688C16 24.125 15.6313 24.5 15.1688 24.5C15.0563 24.5 14.9438 24.475 14.8438 24.4312L8.67503 21.7875C8.26253 21.6125 8.00003 21.2063 8.00003 20.7625C8.00003 20.5875 8.03753 20.4188 8.11878 20.2625L9.05628 18.3875ZM9.00003 10.5H12V14.5C12 15.6062 11.1063 16.5 10 16.5C8.89378 16.5 8.00003 15.6062 8.00003 14.5V11.5C8.00003 10.95 8.45003 10.5 9.00003 10.5ZM17 13.5C17 13.2348 16.8947 12.9804 16.7071 12.7929C16.5196 12.6054 16.2652 12.5 16 12.5C15.7348 12.5 15.4805 12.6054 15.2929 12.7929C15.1054 12.9804 15 13.2348 15 13.5C15 13.7652 15.1054 14.0196 15.2929 14.2071C15.4805 14.3946 15.7348 14.5 16 14.5C16.2652 14.5 16.5196 14.3946 16.7071 14.2071C16.8947 14.0196 17 13.7652 17 13.5Z" fill="#06172C" />
+                    </svg>
+                    <h1 class="header-block__container_title">Пушистые друзья</h1>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!--
+    <main class="main-block">
+        <div class="container">
+            <div class="main-block__container">
+                <div class="search-wrapper__container">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_7_7288)">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.00017 1.33301C6.09656 1.33308 5.20608 1.54925 4.40301 1.96347C3.59994 2.37769 2.90756 2.97795 2.38366 3.71418C1.85976 4.4504 1.51951 5.30124 1.39131 6.1957C1.26311 7.09017 1.35067 8.00232 1.64669 8.85606C1.94271 9.7098 2.4386 10.4804 3.09299 11.1035C3.74739 11.7266 4.54131 12.1842 5.40851 12.4381C6.27572 12.692 7.19106 12.7348 8.07818 12.5629C8.9653 12.3911 9.79847 12.0096 10.5082 11.4503L12.9428 13.885C13.0686 14.0064 13.237 14.0736 13.4118 14.0721C13.5866 14.0706 13.7538 14.0005 13.8774 13.8769C14.001 13.7533 14.0711 13.5861 14.0726 13.4113C14.0741 13.2365 14.0069 13.0681 13.8855 12.9423L11.4508 10.5077C12.1095 9.67209 12.5196 8.66794 12.6342 7.61016C12.7489 6.55237 12.5634 5.48369 12.099 4.5264C11.6346 3.56912 10.9101 2.76191 10.0084 2.19716C9.10665 1.63241 8.06415 1.33294 7.00017 1.33301ZM2.66684 6.99967C2.66684 5.8504 3.12338 4.7482 3.93604 3.93554C4.7487 3.12289 5.8509 2.66634 7.00017 2.66634C8.14944 2.66634 9.25164 3.12289 10.0643 3.93554C10.877 4.7482 11.3335 5.8504 11.3335 6.99967C11.3335 8.14895 10.877 9.25115 10.0643 10.0638C9.25164 10.8765 8.14944 11.333 7.00017 11.333C5.8509 11.333 4.7487 10.8765 3.93604 10.0638C3.12338 9.25115 2.66684 8.14895 2.66684 6.99967Z" fill="#06172C" fill-opacity="0.6" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_7_7288">
+                                <rect width="16" height="16" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                    <input type="search" placeholder="Искать пушистика">
+                </div>
+            </div>
+        </div>
+    </main>
+    -->
+</div>
 </body>
 </html>
