--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="container">
             <div class="main-block__container">
                 <div class="search-wrapper__container">
-                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_7_7288)">
+                    <svg class="search-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clipPath="url(#clip0_7_7288)">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M7.00017 1.33301C6.09656 1.33308 5.20608 1.54925 4.40301 1.96347C3.59994 2.37769 2.90756 2.97795 2.38366 3.71418C1.85976 4.4504 1.51951 5.30124 1.39131 6.1957C1.26311 7.09017 1.35067 8.00232 1.64669 8.85606C1.94271 9.7098 2.4386 10.4804 3.09299 11.1035C3.74739 11.7266 4.54131 12.1842 5.40851 12.4381C6.27572 12.692 7.19106 12.7348 8.07818 12.5629C8.9653 12.3911 9.79847 12.0096 10.5082 11.4503L12.9428 13.885C13.0686 14.0064 13.237 14.0736 13.4118 14.0721C13.5866 14.0706 13.7538 14.0005 13.8774 13.8769C14.001 13.7533 14.0711 13.5861 14.0726 13.4113C14.0741 13.2365 14.0069 13.0681 13.8855 12.9423L11.4508 10.5077C12.1095 9.67209 12.5196 8.66794 12.6342 7.61016C12.7489 6.55237 12.5634 5.48369 12.099 4.5264C11.6346 3.56912 10.9101 2.76191 10.0084 2.19716C9.10665 1.63241 8.06415 1.33294 7.00017 1.33301ZM2.66684 6.99967C2.66684 5.8504 3.12338 4.7482 3.93604 3.93554C4.7487 3.12289 5.8509 2.66634 7.00017 2.66634C8.14944 2.66634 9.25164 3.12289 10.0643 3.93554C10.877 4.7482 11.3335 5.8504 11.3335 6.99967C11.3335 8.14895 10.877 9.25115 10.0643 10.0638C9.25164 10.8765 8.14944 11.333 7.00017 11.333C5.8509 11.333 4.7487 10.8765 3.93604 10.0638C3.12338 9.25115 2.66684 8.14895 2.66684 6.99967Z" fill="#06172C" fill-opacity="0.6" />
                         </g>
                         <defs>
@@ -33,7 +33,7 @@
                             </clipPath>
                         </defs>
                     </svg>
-                    <input type="search" placeholder="Искать пушистика">
+                    <input type="search" class="search-input" placeholder="Искать пушистика">
                 </div>
             </div>
         </div>
