add jack russel img

--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
                     </svg>
                     <input type="search" class="search-input" placeholder="Искать пушистика">
                 </div>
+
+                <section class="cards-block__container">
+                    <article class="cards-block__card">
+                        <div class="cards-block__card-img">
+                            <img src="./images/Rectangle%2075.png"
+                                 alt="Картинка с Джек Рассел Терьером"
+                                 class="cards-block__card">
+                        </div>
+                        <div class="cards-block__card-text">
+                            <h2 class="cards-block__card-title"></h2>
+                        </div>
+                    </article>
+                </section>
             </div>
         </div>
     </main>
