--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                         </div>
                         <div class="cards-block__card-text">
                             <h2 class="cards-block__card-name">Лола</h2>
+                            <div class="cards-block__card-description">Джек Рассел Терьер</div>
+                            <div class="cards-block__card-location">10 км</div>
                         </div>
                     </article>
                 </section>
