--- a/index.html
+++ b/index.html
@@ -42,13 +42,19 @@
                     <article class="cards-block__card">
                         <div class="cards-block__card-img">
                             <img src="./images/Rectangle%2075.png"
-                                 alt="Картинка с Джек Рассел Терьером"
-                                 class="cards-block__card">
+                                 alt="Картинка с Джек Рассел Терьером">
                         </div>
-                        <div class="cards-block__card-text">
-                            <h2 class="cards-block__card-name">Лола</h2>
-                            <div class="cards-block__card-description">Джек Рассел Терьер</div>
-                            <div class="cards-block__card-location">10 км</div>
+                        <div class="cards-block__card-wrapper">
+                            <div class="cards-block__card-text">
+                                <h2 class="cards-block__card-name">Лола</h2>
+                                <div class="cards-block__card-description">Джек Рассел Терьер</div>
+                                <div class="cards-block__card-location">10 км</div>
+                            </div>
+                            <div class="cards-block__like-button">
+                                <img src="images/Like.svg"
+                                     alt="Иконка лайка"
+                                     class="cards-block__like-img">
+                            </div>
                         </div>
                     </article>
                 </section>
