--- a/index.html
+++ b/index.html
@@ -46,9 +46,83 @@
                         </div>
                         <div class="cards-block__card-wrapper">
                             <div class="cards-block__card-text">
-                                <h2 class="cards-block__card-name">Лола</h2>
+                                <div class="cards-block__card-title">
+                                    <h2 class="cards-block__card-name">Лола</h2>
+                                    <div class="cards-block__card-gender girl">
+                                        <img src="./images/Vector.svg" alt="девочка">
+                                    </div>
+                                </div>
                                 <div class="cards-block__card-description">Джек Рассел Терьер</div>
                                 <div class="cards-block__card-location">10 км</div>
+                            </div>
+                            <div class="cards-block__like-button">
+                                <img src="images/Like.svg"
+                                     alt="Иконка лайка"
+                                     class="cards-block__like-img">
+                            </div>
+                        </div>
+                    </article>
+                    <article class="cards-block__card">
+                        <div class="cards-block__card-img">
+                            <img src="./images/Rectangle%2077.png"
+                                 alt="Картинка с Лабрадором">
+                        </div>
+                        <div class="cards-block__card-wrapper">
+                            <div class="cards-block__card-text">
+                                <div class="cards-block__card-title">
+                                    <h2 class="cards-block__card-name">Роки</h2>
+                                    <div class="cards-block__card-gender boy">
+                                        <img src="./images/boySymbol.svg" alt="мальчик">
+                                    </div>
+                                </div>
+                                <div class="cards-block__card-description">Лабрадор-Ретривер</div>
+                                <div class="cards-block__card-location">2,5 км</div>
+                            </div>
+                            <div class="cards-block__like-button">
+                                <img src="images/redLike.svg"
+                                     alt="Иконка лайка"
+                                     class="cards-block__like-img">
+                            </div>
+                        </div>
+                    </article>
+                    <article class="cards-block__card">
+                        <div class="cards-block__card-img">
+                            <img src="./images/Rectangle%2076.png"
+                                 alt="Картинка с Бордер-Колли">
+                        </div>
+                        <div class="cards-block__card-wrapper">
+                            <div class="cards-block__card-text">
+                                <div class="cards-block__card-title">
+                                    <h2 class="cards-block__card-name">Тузик</h2>
+                                    <div class="cards-block__card-gender boy">
+                                        <img src="./images/boySymbol.svg" alt="мальчик">
+                                    </div>
+                                </div>
+                                <div class="cards-block__card-description">Бордер-Колли</div>
+                                <div class="cards-block__card-location">33 км</div>
+                            </div>
+                            <div class="cards-block__like-button">
+                                <img src="images/Like.svg"
+                                     alt="Иконка лайка"
+                                     class="cards-block__like-img">
+                            </div>
+                        </div>
+                    </article>
+                    <article class="cards-block__card">
+                        <div class="cards-block__card-img">
+                            <img src="./images/Rectangle%2078.png"
+                                 alt="Картинка с Немецкой Овчаркой">
+                        </div>
+                        <div class="cards-block__card-wrapper">
+                            <div class="cards-block__card-text">
+                                <div class="cards-block__card-title">
+                                    <h2 class="cards-block__card-name">Рекс</h2>
+                                    <div class="cards-block__card-gender boy">
+                                        <img src="./images/boySymbol.svg" alt="мальчик">
+                                    </div>
+                                </div>
+                                <div class="cards-block__card-description">Немецкая Овчарка</div>
+                                <div class="cards-block__card-location">64 км</div>
                             </div>
                             <div class="cards-block__like-button">
                                 <img src="images/Like.svg"
