--- a/pets/pet.html
+++ b/pets/pet.html
@@ -27,10 +27,27 @@
                             <path d="M17 0C14.991 0 13.2081 0.792981 12.0001 2.15595C10.7921 0.792981 9.00918 0 7.00023 0C5.2505 0.00211705 3.57303 0.698135 2.33578 1.93539C1.09853 3.17264 0.402508 4.8501 0.400391 6.59984C0.400391 13.8337 10.9811 19.6135 11.4311 19.8565C11.606 19.9507 11.8015 20 12.0001 20C12.1987 20 12.3942 19.9507 12.5691 19.8565C13.0191 19.6135 23.5998 13.8337 23.5998 6.59984C23.5977 4.8501 22.9017 3.17264 21.6644 1.93539C20.4272 0.698135 18.7497 0.00211705 17 0Z" fill="#FF1C7B" />
                         </svg>
                         </button>
-                    </div>-
+                    </div>
                 </div>
             </div>
         </header>
+        <main class="main-block">
+            <div class="container">
+                <div class="main-block__container">
+                    <section class="main-block__title-block">
+                        <div class="main-block__title-wrap">
+                            <h1 class="main-block__title-name">Роки</h1>
+                            <div class="main-block__title-icon">
+                                <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12.833 0.833008H9.49967C9.04134 0.833008 8.66634 1.20801 8.66634 1.66634C8.66634 2.12467 9.04134 2.49967 9.49967 2.49967H10.8163L7.50801 5.80801C6.77467 5.29967 5.88301 4.99967 4.91634 4.99967C2.38301 4.99967 0.333008 7.04967 0.333008 9.58301C0.333008 12.1163 2.38301 14.1663 4.91634 14.1663C7.44967 14.1663 9.49967 12.1163 9.49967 9.58301C9.49967 8.61634 9.19967 7.72467 8.69134 6.98301L11.9997 3.68301V4.99967C11.9997 5.45801 12.3747 5.83301 12.833 5.83301C13.2913 5.83301 13.6663 5.45801 13.6663 4.99967V1.66634C13.6663 1.20801 13.2913 0.833008 12.833 0.833008ZM4.91634 12.4997C3.30801 12.4997 1.99967 11.1913 1.99967 9.58301C1.99967 7.97467 3.30801 6.66634 4.91634 6.66634C6.52467 6.66634 7.83301 7.97467 7.83301 9.58301C7.83301 11.1913 6.52467 12.4997 4.91634 12.4997Z" fill="#2C061F" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="main-block__title-about">Лабрадор-Ретривер</div>
+                    </section>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 </html>
