--- a/pets/pet.html
+++ b/pets/pet.html
@@ -35,15 +35,25 @@
             <div class="container">
                 <div class="main-block__container">
                     <section class="main-block__title-block">
-                        <div class="main-block__title-wrap">
-                            <h1 class="main-block__title-name">Роки</h1>
-                            <div class="main-block__title-icon">
-                                <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M12.833 0.833008H9.49967C9.04134 0.833008 8.66634 1.20801 8.66634 1.66634C8.66634 2.12467 9.04134 2.49967 9.49967 2.49967H10.8163L7.50801 5.80801C6.77467 5.29967 5.88301 4.99967 4.91634 4.99967C2.38301 4.99967 0.333008 7.04967 0.333008 9.58301C0.333008 12.1163 2.38301 14.1663 4.91634 14.1663C7.44967 14.1663 9.49967 12.1163 9.49967 9.58301C9.49967 8.61634 9.19967 7.72467 8.69134 6.98301L11.9997 3.68301V4.99967C11.9997 5.45801 12.3747 5.83301 12.833 5.83301C13.2913 5.83301 13.6663 5.45801 13.6663 4.99967V1.66634C13.6663 1.20801 13.2913 0.833008 12.833 0.833008ZM4.91634 12.4997C3.30801 12.4997 1.99967 11.1913 1.99967 9.58301C1.99967 7.97467 3.30801 6.66634 4.91634 6.66634C6.52467 6.66634 7.83301 7.97467 7.83301 9.58301C7.83301 11.1913 6.52467 12.4997 4.91634 12.4997Z" fill="#2C061F" />
+                        <div class="main-block__title-content">
+                            <div class="main-block__title-wrap">
+                                <h1 class="main-block__title-name">Роки</h1>
+                                <div class="main-block__title-icon">
+                                    <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M12.833 0.833008H9.49967C9.04134 0.833008 8.66634 1.20801 8.66634 1.66634C8.66634 2.12467 9.04134 2.49967 9.49967 2.49967H10.8163L7.50801 5.80801C6.77467 5.29967 5.88301 4.99967 4.91634 4.99967C2.38301 4.99967 0.333008 7.04967 0.333008 9.58301C0.333008 12.1163 2.38301 14.1663 4.91634 14.1663C7.44967 14.1663 9.49967 12.1163 9.49967 9.58301C9.49967 8.61634 9.19967 7.72467 8.69134 6.98301L11.9997 3.68301V4.99967C11.9997 5.45801 12.3747 5.83301 12.833 5.83301C13.2913 5.83301 13.6663 5.45801 13.6663 4.99967V1.66634C13.6663 1.20801 13.2913 0.833008 12.833 0.833008ZM4.91634 12.4997C3.30801 12.4997 1.99967 11.1913 1.99967 9.58301C1.99967 7.97467 3.30801 6.66634 4.91634 6.66634C6.52467 6.66634 7.83301 7.97467 7.83301 9.58301C7.83301 11.1913 6.52467 12.4997 4.91634 12.4997Z" fill="#2C061F" />
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="main-block__title-about">Лабрадор-Ретривер</div>
+                        </div>
+                        <div class="main-block__title-location">
+                            <div class="main-block__location-icon">
+                                <svg width="12" height="14" viewBox="0 0 12 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.00038 0.333008C3.05971 0.333008 0.667046 2.72567 0.667046 5.66301C0.647713 9.95967 5.79771 13.5223 6.00038 13.6663C6.00038 13.6663 11.353 9.95967 11.3337 5.66634C11.3337 2.72567 8.94105 0.333008 6.00038 0.333008ZM6.00038 8.33301C4.52705 8.33301 3.33371 7.13967 3.33371 5.66634C3.33371 4.19301 4.52705 2.99967 6.00038 2.99967C7.47371 2.99967 8.66705 4.19301 8.66705 5.66634C8.66705 7.13967 7.47371 8.33301 6.00038 8.33301Z" fill="#FF1C7B" />
                                 </svg>
                             </div>
+                            <div class="main-block__location-about">2,5 км</div>
                         </div>
-                        <div class="main-block__title-about">Лабрадор-Ретривер</div>
                     </section>
                 </div>
             </div>
