--- a/pets/pet.html
+++ b/pets/pet.html
@@ -55,6 +55,20 @@
                             <div class="main-block__location-about">2,5 км</div>
                         </div>
                     </section>
+                    <section class="main-block__info-block">
+                        <div class="info-block__item">
+                            <h2 class="info-block__item-title">Возраст</h2>
+                            <p class="info-block__item-description">6 лет</p>
+                        </div>
+                        <div class="info-block__item">
+                            <h2 class="info-block__item-title">Рост</h2>
+                            <p class="info-block__item-description">90 см</p>
+                        </div>
+                        <div class="info-block__item">
+                            <h2 class="info-block__item-title">Вес</h2>
+                            <p class="info-block__item-description">8 кг</p>
+                        </div>
+                    </section>
                 </div>
             </div>
         </main>
