--- a/pets/pet.html
+++ b/pets/pet.html
@@ -69,6 +69,13 @@
                             <p class="info-block__item-description">8 кг</p>
                         </div>
                     </section>
+                    <section class="main-block__about-block">
+                        <p class="about-block__description">
+                            Роки — нежный и любящий лабрадор-ретривер,
+                            который с нетерпением ждет своего любящего хозяина...
+                            <span>УЗНАТЬ БОЛЬШЕ</span>
+                        </p>
+                    </section>
                 </div>
             </div>
         </main>
